fix banner and home feature block bottom placeholder alignment on IE.

--- a/src/main/webapp/src/scss/main/components/banner.scss
+++ b/src/main/webapp/src/scss/main/components/banner.scss
@@ -30,6 +30,7 @@
 .foxtel-banner__content--vBtm{
   width:100%;
   position:absolute;
+  left:0;
   bottom:0;
   @media (min-width: 768px) {
     .container {
